# Open_AVB

./: README.md
examples/common/: avbtp.c  avbtp.h
examples/gstreamer-avb-plugins/: README
examples/gstreamer-avb-plugins/gst-plugin/src/: Makefile.am  gstavbsink_talker.c  gstavbsink_talker.h  gstavbsrc_listener.c  gstavbsrc_listener.h
examples/stored_media_streaming/: Makefile  README.rst  avbtp.c  avbtp.h  demux_audio_video.c  gst_plugins.c  recieve_video.c  traffic_generator.c  transmit_video.c
